--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:background="#FAFAFA"
+    tools:context=".activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,7 +68,7 @@
                 android:paddingHorizontal="12dp">
 
                 <EditText
-                    android:id="@+id/nip"
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="2dp"
@@ -151,13 +152,18 @@
             android:layout_weight="2.5"
             android:background="#BABABA"></ImageView>
 
-        <TextView
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="Belum punya akun? Daftar disini"
-            android:textAlignment="center"
-            android:textSize="9sp"></TextView>
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Belum punya akun? Daftar disini"
+                android:textSize="9sp"
+                android:layout_gravity="center"></TextView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <ImageView
             android:layout_width="0dp"
@@ -167,11 +173,12 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:background="@color/primary"
+        android:background="@drawable/bt_primary_round"
         android:gravity="center">
 
         <TextView
@@ -181,5 +188,17 @@
             android:textColor="@color/white"
             android:textStyle="bold"></TextView>
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:id="@+id/SHOW_PROGRESS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible">
+        </ProgressBar>
+    </RelativeLayout>
 
 </LinearLayout>
