--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".activity.RegisterActivity">
 
     <!-- HEADER START -->
     <LinearLayout
@@ -38,15 +38,15 @@
                 android:layout_height="60dp"
                 android:orientation="horizontal"
                 android:weightSum="10">
+
                 <ImageView
                     android:id="@+id/ly_section_ic"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:background="#FFB20F">
-                </ImageView>
+                    android:layout_marginLeft="16dp"
+                    android:background="#FFB20F"></ImageView>
                 <TextView
                     android:id="@+id/ly_section_title"
                     android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
                 android:textStyle="bold">
             </TextView>
             <EditText
-                android:id="@+id/nik"
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -108,7 +108,7 @@
                 android:textStyle="bold">
             </TextView>
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/nama_lengkap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -133,11 +133,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginHorizontal="16dp">
+
                 <Spinner
                     android:id="@+id/jenis_kelamin"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                </Spinner>
+                    android:layout_height="match_parent"></Spinner>
             </LinearLayout>
             <!--Tempat Lahir-->
             <TextView
