--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -139,6 +139,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"></Spinner>
             </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Agama"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:textStyle="bold">
+            </TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="16dp">
+
+                <Spinner
+                    android:id="@+id/agama"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></Spinner>
+            </LinearLayout>
             <!--Tempat Lahir-->
             <TextView
                 android:layout_width="wrap_content"
@@ -316,7 +336,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:hint="Tulis nama lembaga pendidikan"
                 android:textSize="16sp"
-                android:maxLength="14"
+                android:maxLength="30"
                 android:inputType="textCapWords"
                 android:imeOptions="actionNext">
             </EditText>
