Upload Pas Foto dan KTP done

--- a/app/src/main/res/layout/activity_ktpactivity.xml
+++ b/app/src/main/res/layout/activity_ktpactivity.xml
@@ -35,9 +35,10 @@
     <!-- HEADER END -->
 
     <ImageView
+        android:id="@+id/img_pas_foto"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:background="#bababa"
+        android:background="#00BABABA"
         android:layout_marginTop="16dp"
         android:layout_gravity="center">
     </ImageView>
@@ -71,9 +72,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Status :">
+                android:text="Status : ">
             </TextView>
             <TextView
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Belum"
@@ -84,6 +86,7 @@
 
 
     <Button
+        android:id="@+id/btn_upload"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
@@ -91,5 +94,18 @@
         android:text="Upload / Perbaharui Foto"
         android:textAllCaps="false">
     </Button>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <ProgressBar
+            android:id="@+id/SHOW_PROGRESS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:visibility="invisible"></ProgressBar>
+    </RelativeLayout>
 
 </LinearLayout>
