--- a/app/src/main/res/layout/activity_ijazah.xml
+++ b/app/src/main/res/layout/activity_ijazah.xml
@@ -61,9 +61,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Status :">
+                android:text="Status : ">
             </TextView>
             <TextView
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Belum"
@@ -77,9 +78,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="File Ijazah :">
+                android:text="File Ijazah : ">
             </TextView>
             <TextView
+                android:id="@+id/lihat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lihat"
