--- a/app/src/main/res/layout/activity_ijazah.xml
+++ b/app/src/main/res/layout/activity_ijazah.xml
@@ -91,6 +91,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_upload"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
@@ -99,5 +100,17 @@
         android:textAllCaps="false">
     </Button>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <ProgressBar
+            android:id="@+id/SHOW_PROGRESS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:visibility="invisible"></ProgressBar>
+    </RelativeLayout>
 
 </LinearLayout>
