--- a/app/src/main/res/layout/activity_kartu_ak1.xml
+++ b/app/src/main/res/layout/activity_kartu_ak1.xml
@@ -1,72 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".activity.KartuAK1Activity">
 
     <!-- HEADER START -->
     <LinearLayout
+        android:id="@+id/ly_header"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@drawable/main_header">
+
         <ImageView
             android:id="@+id/btn_back"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@drawable/bt_back"
+            android:layout_gravity="center"
             android:layout_marginStart="16dp"
-            android:layout_gravity="center">
-        </ImageView>
+            android:background="@drawable/bt_back"></ImageView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kartu AK1 Saya"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
+            android:layout_gravity="center"
             android:layout_marginLeft="16dp"
-            android:layout_gravity="center">
-        </TextView>
+            android:text="Kartu AK1 Saya"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"></TextView>
     </LinearLayout>
     <!-- HEADER END -->
 
-    <androidx.core.widget.NestedScrollView
+<!--   <LinearLayout-->
+<!--       android:layout_width="wrap_content"-->
+<!--       android:layout_height="wrap_content"-->
+<!--       android:orientation="vertical"-->
+<!--       android:layout_below="@id/ly_header">-->
+<!--       <TextView-->
+<!--           android:layout_width="wrap_content"-->
+<!--           android:layout_height="wrap_content"-->
+<!--           android:layout_marginTop="8dp"-->
+<!--           android:layout_marginHorizontal="16dp"-->
+<!--           android:text="Pengajuan Kartu AK1"-->
+<!--           android:textColor="#000"-->
+<!--           android:textStyle="bold"-->
+<!--           android:textSize="16sp">-->
+<!--       </TextView>-->
+<!--       <TextView-->
+<!--           android:id="@+id/deskripsi_voucher"-->
+<!--           android:layout_width="wrap_content"-->
+<!--           android:layout_height="wrap_content"-->
+<!--           android:layout_marginTop="8dp"-->
+<!--           android:layout_marginHorizontal="16dp"-->
+<!--           android:text="Mohon melengkapi data diri, foto KTP, pas foto 3x4 dan file ijazah pendidikan sebelum pembuatan kartu ak1">-->
+<!--       </TextView>-->
+<!--   </LinearLayout>-->
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/ly_header"
+        android:layout_above="@id/ly_footer">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginHorizontal="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:layout_marginTop="16dp"
-                android:background="@color/primary"
-                android:gravity="center">
-
+                android:layout_marginHorizontal="16dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Buat Kartu AK1 Baru"
-                    android:textColor="@color/white"
-                    android:textStyle="bold">
+                    android:textSize="11sp"
+                    android:gravity="center"
+                    android:text="Kartu AK1 yang dibuat akan tampil dibawah ini. Bagi yang ingin mengajaukan Kartu AK1 baru, silahkan klik tombol Buat Kartu AK1">
                 </TextView>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="16dp"
+                android:background="#FAFAFA">
+            </View>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:divider="#00FFFFFF"
+                android:dividerHeight="5dp"
+                tools:listitem="@layout/adapter_ak1">
+            </ListView>
+        </LinearLayout>
+    </ScrollView>
 
+    <RelativeLayout
+        android:id="@+id/ly_footer"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/btn_ak1"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/bt_red_round"
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:text="Daftar Kartu AK1 Saya :">
+                android:text="Buat Kartu AK1"
+                android:textAllCaps="false"
+                android:textColor="#FFF"
+                android:textStyle="bold">
             </TextView>
-
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
