--- a/app/src/main/res/layout/fragment_pengumuman.xml
+++ b/app/src/main/res/layout/fragment_pengumuman.xml
@@ -24,17 +24,19 @@
     </LinearLayout>
     <!-- HEADER END -->
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp">
-        <ListView
-            android:id="@+id/lis_pengumuman"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="16dp"
-            tools:listitem="@layout/adapter_pengumuman">
-        </ListView>
-    </LinearLayout>
+            android:orientation="vertical">
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/adapter_pengumuman">
+            </ListView>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
