--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -47,9 +47,9 @@
                     android:paddingVertical="16dp">
                     <ImageView
                         android:id="@+id/img_profil"
-                        android:layout_width="75dp"
+                        android:layout_width="90dp"
                         android:layout_height="100dp"
-                        android:background="@color/primary">
+                        android:background="#00FFFFFF">
                     </ImageView>
                     <TextView
                         android:id="@+id/nama_lengkap"
