--- a/app/src/main/res/layout/activity_ktpactivity.xml
+++ b/app/src/main/res/layout/activity_ktpactivity.xml
@@ -105,6 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginTop="16dp"
             android:visibility="invisible"></ProgressBar>
     </RelativeLayout>
 
