--- a/app/src/main/res/layout/adapter_ak1.xml
+++ b/app/src/main/res/layout/adapter_ak1.xml
@@ -18,7 +18,7 @@
             android:layout_height="46dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:background="@color/primary">
+            android:background="@drawable/profile_ic_ktp">
 
             <TextView
                 android:id="@+id/number"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="1"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:textSize="20dp"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -142,14 +142,14 @@
             android:layout_alignParentBottom="true"
             android:layout_marginHorizontal="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#FEBC09"
+            android:background="@drawable/bt_yellow_round"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lihat Detail"
-                android:textColor="@color/black"
+                android:textColor="@color/tetriary"
                 android:textSize="12sp"
                 android:textStyle="bold"></TextView>
         </LinearLayout>
