--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -203,11 +203,12 @@
                     android:background="@drawable/bt_primary_round">
 
                     <ImageView
-                        android:layout_width="42dp"
+                        android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
-                        android:background="@color/secondary"></ImageView>
+                        android:background="@drawable/notif_ic_loker">
+                    </ImageView>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
